RW-69: Fix 2 scrollbars appear and validation for add recipe (#55)
* Fixed scrollbar issue

* Updated validation and text

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html {
-  height: 100%;
+  min-height: 100%;
 
   /* Add margin left to match scrollbar width to fix jumping scrollbar */
   /* https://aykevl.nl/2014/09/fix-jumping-scrollbar */
@@ -13,5 +13,5 @@ html {
 }
 
 #__next {
-  height: 100%;
+  min-height: 100%;
 }
